@@ -80,72 +80,4 @@
         </dependency>
     </dependencies>
 
-    <profiles>
-        <profile>
-            <id>old-jdks</id>
-            <activation>
-                <jdk>(,1.8)</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>${maven-compiler-plugin.version}</version>
-                        <configuration>
-                            <source>11</source>
-                            <target>11</target>
-                            <encoding>UTF-8</encoding>
-                            <showWarnings>true</showWarnings>
-                            <showDeprecation>true</showDeprecation>
-
-                            <!-- update -->
-                            <verbose>false</verbose>
-                            <fork>true</fork>
-                            <compilerVersion>11</compilerVersion>
-                            <!-- update -->
-
-                            <compilerArgs>
-                                <arg>--add-exports=jdk.hotspot.agent/sun.jvm.hotspot=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>active-on-jdk-11</id>
-            <activation>
-                <jdk>(9,11)</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>${maven-compiler-plugin.version}</version>
-                        <configuration>
-                            <source>11</source>
-                            <target>11</target>
-                            <encoding>UTF-8</encoding>
-                            <showWarnings>true</showWarnings>
-                            <showDeprecation>true</showDeprecation>
-
-                            <!-- update -->
-                            <verbose>false</verbose>
-                            <fork>true</fork>
-                            <compilerVersion>11</compilerVersion>
-                            <!-- update -->
-
-                            <compilerArgs>
-                                <arg>--add-exports=jdk.hotspot.agent/sun.jvm.hotspot=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
 </project>
